hphp/test/vm/impl_abstract_dv_as.php.exp
HipHop Fatal error: Declaration of B::s() must be compatible with that of A::s() in hphp/test/vm/impl_abstract_dv_as.php on line 3
